--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -18,31 +18,31 @@
             <StackPanel hc:Growl.GrowlParent="True" Margin="0,10,10,10"/>
         </ScrollViewer>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock Text="应该是只支持4.1以上的版本,我没测试" Margin="10"/>
+            <TextBlock Text="Seharusnya hanya mendukung versi di atas 4.1, saya belum mengujinya" Margin="10"/>
             <DockPanel Margin="10">
-                <TextBlock Text="Live2D安装目录:"/>
+                <TextBlock Text="Direktori instalasi Live2D:"/>
                 <TextBlock Text="{Binding Path}"/>
             </DockPanel>
             <DockPanel Margin="10">
-                <TextBlock Text="Live2D版本:"/>
+                <TextBlock Text="Versi Live2D:"/>
                 <TextBlock Text="{Binding Version}"/>
             </DockPanel>
             <Button
                 Margin="20,20,0,0"
                 Style="{StaticResource ButtonPrimary}" 
-                Content="执行"
+                Content="Start"
                 Command="{Binding WriteResourceCommand}"
                 />
             <Button
                 Margin="20,20,0,0"
                 Style="{StaticResource ButtonPrimary}" 
-                Content="手动选择Live2D安装目录"
+                Content="Pilih direktori instalasi Live2D secara manual"
                 Command="{Binding OpenFolderSelectoryCommand}"
                 />
             <Button
                 Margin="20,20,0,20"
                 Style="{StaticResource ButtonPrimary}" 
-                Content="复制最新版本下载链接"
+                Content="Salin tautan unduhan versi terbaru"
                 Command="{Binding CopyDownloadUrlCommand}"
                 />
         </StackPanel>
